--- a/apps/monitoring/config-pvcs.yaml
+++ b/apps/monitoring/config-pvcs.yaml
@@ -8,3 +8,14 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: uptime-kuma-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
