--- a/apps/monitoring/config-pvcs.yaml
+++ b/apps/monitoring/config-pvcs.yaml
@@ -19,3 +19,14 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: changedetection-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
