--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -8,6 +8,11 @@ resources:
   - grafana-deployment.yaml
   - grafana-service.yaml
   - grafana-ingress.yaml
+  - changedetection-deployment.yaml
+  - changedetection-service.yaml
+  - changedetection-ingress.yaml
+  - playwright-chrome-deployment.yaml
+  - playwright-chrome-service.yaml
   - uptime-kuma-deployment.yaml
   - uptime-kuma-service.yaml
   - uptime-kuma-ingress.yaml
