--- a/apps/apps/config-pvcs.yaml
+++ b/apps/apps/config-pvcs.yaml
@@ -1,6 +1,17 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: n8n-config
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: heimdall-config
 spec:
   accessModes:
