--- a/apps/apps/kustomization.yaml
+++ b/apps/apps/kustomization.yaml
@@ -4,6 +4,9 @@ namespace: apps
 resources:
   - namespace.yaml
   - config-pvcs.yaml
+  - n8n-deployment.yaml
+  - n8n-service.yaml
+  - n8n-ingress.yaml
   - heimdall-deployment.yaml
   - heimdall-service.yaml
   - heimdall-ingress.yaml
