--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -15,3 +15,4 @@ resources:
   - homepage-tv-service.yaml
   - homepage-tv-ingress.yaml
   - homepage-tv-redirects.yaml
+  - traefik-helmchartconfig.yaml
