--- a/apps/infrastructure/kustomization.yaml
+++ b/apps/infrastructure/kustomization.yaml
@@ -16,3 +16,11 @@ resources:
   - homepage-tv-ingress.yaml
   - homepage-tv-redirects.yaml
   - traefik-helmchartconfig.yaml
+patches:
+  - target:
+      kind: HelmChartConfig
+      name: traefik
+    patch: |-
+      - op: replace
+        path: /metadata/namespace
+        value: kube-system
