--- a/apps/system/kustomization.yaml
+++ b/apps/system/kustomization.yaml
@@ -1,8 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - apps
-  - system
-  - monitoring
-  - infrastructure
-  - media
+  - traefik-helmchartconfig.yaml
