add immich to media with nfs photos mount

--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -53,6 +53,11 @@ data:
             icon: changedetection
             siteMonitor: https://change.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Tautulli:
+            href: https://tautulli.romanpeters.nl
+            icon: tautulli
+            siteMonitor: http://tautulli.media.svc.cluster.local:8181
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308, 401, 403]
     - Automation:
         - Home Assistant:
             href: https://home.romanpeters.nl
@@ -79,6 +84,21 @@ data:
             href: https://plex.romanpeters.nl
             icon: plex
             siteMonitor: https://plex.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Immich:
+            href: https://immich.romanpeters.nl
+            icon: immich
+            siteMonitor: https://immich.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Audiobookshelf:
+            href: https://books.romanpeters.nl
+            icon: audiobookshelf
+            siteMonitor: https://books.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Calibre Web:
+            href: https://ebooks.romanpeters.nl
+            icon: calibre-web
+            siteMonitor: https://ebooks.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
         - Overseerr:
             href: https://overseerr.romanpeters.nl
@@ -109,21 +129,6 @@ data:
             href: https://transmission.romanpeters.nl
             icon: transmission
             siteMonitor: https://transmission.romanpeters.nl
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
-        - Tautulli:
-            href: https://tautulli.romanpeters.nl
-            icon: tautulli
-            siteMonitor: http://tautulli.media.svc.cluster.local:8181
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308, 401, 403]
-        - Audiobookshelf:
-            href: https://books.romanpeters.nl
-            icon: audiobookshelf
-            siteMonitor: https://books.romanpeters.nl
-            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
-        - Calibre Web:
-            href: https://ebooks.romanpeters.nl
-            icon: calibre-web
-            siteMonitor: https://ebooks.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
     - Infrastructure:
         - Authentik:
