--- a/apps/media/config-pvcs.yaml
+++ b/apps/media/config-pvcs.yaml
@@ -56,6 +56,17 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: immich-postgres-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: transmission-config
 spec:
   accessModes:
