--- a/apps/media/immich-postgres.yaml
+++ b/apps/media/immich-postgres.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:16.3-alpine
+          image: pgvector/pgvector:pg16
           imagePullPolicy: IfNotPresent
           ports:
             - name: postgres
