--- a/apps/media/calibre-web-ingress.yaml
+++ b/apps/media/calibre-web-ingress.yaml
@@ -1,9 +1,22 @@
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: calibreweb-xscheme
+  namespace: media
+spec:
+  headers:
+    customRequestHeaders:
+      X-Scheme: "https"
+      X-Forwarded-Proto: "https"
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: calibre-web
+  namespace: media
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: media-calibreweb-xscheme@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
@@ -27,3 +40,4 @@ spec:
                 name: calibre-web
                 port:
                   name: http
+
