--- a/apps/media/audiobookshelf-redirect.yaml
+++ b/apps/media/audiobookshelf-redirect.yaml
@@ -1,32 +1,32 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: calibreweb-xscheme
+  name: audiobookshelf-redirect
   namespace: media
 spec:
-  headers:
-    customRequestHeaders:
-      X-Scheme: "https"
-      X-Forwarded-Proto: "https"
+  redirectRegex:
+    regex: ^https?://audiobooks\.romanpeters\.nl/(.*)
+    replacement: https://books.romanpeters.nl/$1
+    permanent: true
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: calibre-web
+  name: audiobookshelf-redirect-ingress
   namespace: media
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
-    traefik.ingress.kubernetes.io/router.middlewares: media-calibreweb-xscheme@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: media-audiobookshelf-redirect@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
-    - host: ebooks.romanpeters.nl
+    - host: audiobooks.romanpeters.nl
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: calibre-web
+                name: audiobookshelf
                 port:
                   name: http
