--- a/apps/media/overseerr-ingress.yaml
+++ b/apps/media/overseerr-ingress.yaml
@@ -1,3 +1,25 @@
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: overseerr-redirect-requests
+  namespace: media
+spec:
+  redirectRegex:
+    regex: ^https?://requests\.romanpeters\.nl/(.*)
+    replacement: https://request.romanpeters.nl/$1
+    permanent: true
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: overseerr-redirect-main
+  namespace: media
+spec:
+  redirectRegex:
+    regex: ^https?://overseerr\.romanpeters\.nl/(.*)
+    replacement: https://request.romanpeters.nl/$1
+    permanent: true
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -5,60 +27,11 @@ metadata:
   namespace: media
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: media-overseerr-redirect-requests@kubernetescrd,media-overseerr-redirect-main@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
-    - host: overseerr.romanpeters.nl
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: overseerr
-                port:
-                  name: http
-    - host: requests.romanpeters.nl
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: overseerr
-                port:
-                  name: http
     - host: request.romanpeters.nl
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: overseerr
-                port:
-                  name: http
-    - host: overseerr.prod.romanpeters.nl
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: overseerr
-                port:
-                  name: http
-    - host: requests.prod.romanpeters.nl
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: overseerr
-                port:
-                  name: http
-    - host: request.prod.romanpeters.nl
       http:
         paths:
           - path: /
