--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   valuesContent: |-
     additionalArguments:
-      - "--entrypoints.web.forwardedHeaders.insecure=true"
+      - "--entrypoints.web.forwardedHeaders.trustedIPs=10.10.20.150"
