Revert "set trusted IP's for authentik"
This reverts commit 6d2de081398b6f5046e53594892508f82e51d44e.

--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   valuesContent: |-
     additionalArguments:
-      - "--entrypoints.web.forwardedHeaders.trustedIPs=10.10.20.150"
+      - "--entrypoints.web.forwardedHeaders.insecure=true"
