Change nfs mount path immich

--- a/apps/media/immich-server.yaml
+++ b/apps/media/immich-server.yaml
@@ -46,7 +46,7 @@ spec:
               value: "http://immich-machine-learning:3003"
           volumeMounts:
             - name: upload
-              mountPath: /usr/src/app/upload
+              mountPath: /mnt/media/photos
               subPath: photos
       volumes:
         - name: upload
