Add immich data PVC

--- a/apps/media/config-pvcs.yaml
+++ b/apps/media/config-pvcs.yaml
@@ -67,6 +67,17 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: immich-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: transmission-config
 spec:
   accessModes:
