--- a/apps/media/immich-server.yaml
+++ b/apps/media/immich-server.yaml
@@ -14,6 +14,21 @@ spec:
       labels:
         app.kubernetes.io/name: immich-server
     spec:
+      initContainers:
+        - name: immich-data-init
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - |
+              set -e
+              for d in upload thumbs backups library profile encoded-video; do
+                mkdir -p "/data/${d}"
+                touch "/data/${d}/.immich"
+              done
+          volumeMounts:
+            - name: immich-data
+              mountPath: /data
       containers:
         - name: immich-server
           image: ghcr.io/immich-app/immich-server:release
