--- a/apps/apps/gitea-ingress.yaml
+++ b/apps/apps/gitea-ingress.yaml
@@ -1,3 +1,14 @@
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: gitea-redirect
+  namespace: apps
+spec:
+  redirectRegex:
+    regex: ^https?://gitea\.romanpeters\.nl/(.*)
+    replacement: https://git.romanpeters.nl/$1
+    permanent: true
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -26,6 +37,7 @@ metadata:
   name: gitea-redirect
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: apps-gitea-redirect@kubernetescrd
   labels:
     app.kubernetes.io/name: gitea
 spec:
