--- a/apps/monitoring/grafana-deployment.yaml
+++ b/apps/monitoring/grafana-deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: GF_AUTH_OAUTH_AUTO_LOGIN
               value: "true"
             - name: GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH
-              value: "contains(groups[*], 'Grafana Admins') && 'Admin' || contains(groups[*], 'Grafana Editors') && 'Editor' || 'Viewer'"
+              value: "contains(groups[*], 'grafana-admins') && 'Admin' || contains(groups[*], 'grafana-editors') && 'Editor' || 'Viewer'"
             - name: GF_SECURITY_ADMIN_USER
               valueFrom:
                 secretKeyRef:
