Add Prometheus Tautulli metrics and TV dashboard link

--- a/apps/monitoring/config-pvcs.yaml
+++ b/apps/monitoring/config-pvcs.yaml
@@ -12,6 +12,17 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: prometheus-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: uptime-kuma-data
 spec:
   accessModes:
