--- a/apps/infrastructure/homepage-tv-config.yaml
+++ b/apps/infrastructure/homepage-tv-config.yaml
@@ -76,6 +76,11 @@ data:
             icon: uptime-kuma
             siteMonitor: https://uptime.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Dashboard:
+            href: https://dashboard.romanpeters.nl/d/dfcujsb0t2tq8c/romantv?orgId=1&refresh=10s&theme=system
+            icon: grafana
+            siteMonitor: https://dashboard.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
         - R-account:
             href: https://auth.romanpeters.nl
             icon: authentik
