--- a/apps/monitoring/grafana-deployment.yaml
+++ b/apps/monitoring/grafana-deployment.yaml
@@ -66,10 +66,29 @@ spec:
                 secretKeyRef:
                   name: grafana-admin
                   key: GF_SECURITY_ADMIN_PASSWORD
+            - name: GF_DATE_FORMATS_FULL_DATE
+              value: "DD-MM-YYYY HH:mm"
+            - name: GF_DATE_FORMATS_INTERVAL_SECOND
+              value: "HH:mm:ss"
+            - name: GF_DATE_FORMATS_INTERVAL_MINUTE
+              value: "HH:mm"
+            - name: GF_DATE_FORMATS_INTERVAL_HOUR
+              value: "DD-MM HH:mm"
+            - name: GF_DATE_FORMATS_INTERVAL_DAY
+              value: "DD-MM-YYYY"
+            - name: GF_DATE_FORMATS_INTERVAL_MONTH
+              value: "MM-YYYY"
+            - name: GF_DATE_FORMATS_INTERVAL_YEAR
+              value: "YYYY"
           volumeMounts:
             - name: data
               mountPath: /var/lib/grafana
+            - name: datasources
+              mountPath: /etc/grafana/provisioning/datasources
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: grafana-data
+        - name: datasources
+          configMap:
+            name: grafana-datasource-prometheus
