--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -4,9 +4,20 @@ namespace: monitoring
 resources:
   - namespace.yaml
   - config-pvcs.yaml
+  - prometheus-configmap.yaml
+  - prometheus-deployment.yaml
+  - prometheus-service.yaml
+  - prometheus-ingress.yaml
+  - tautulli-exporter.sops.yaml
+  - tautulli-exporter-deployment.yaml
+  - tautulli-exporter-service.yaml
+  - tautulli-library-exporter-configmap.yaml
+  - tautulli-library-exporter-deployment.yaml
+  - tautulli-library-exporter-service.yaml
   - grafana-admin.sops.yaml
   - grafana-oauth.sops.yaml
   - grafana-deployment.yaml
+  - grafana-datasource-prometheus.yaml
   - grafana-service.yaml
   - grafana-ingress.yaml
   - changedetection-deployment.yaml
