--- a/apps/monitoring/tautulli-exporter-deployment.yaml
+++ b/apps/monitoring/tautulli-exporter-deployment.yaml
@@ -24,7 +24,7 @@ spec:
               containerPort: 8000
           env:
             - name: TAUTULLI_URL
-              value: "https://tautulli.romanpeters.nl"
+              value: "http://tautulli.media.svc.cluster.local:8181"
             - name: TAUTULLI_API_KEY
               valueFrom:
                 secretKeyRef:
