--- a/apps/media/tautulli-ingress.yaml
+++ b/apps/media/tautulli-ingress.yaml
@@ -1,3 +1,14 @@
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: tautulli-xscheme
+  namespace: media
+spec:
+  headers:
+    customRequestHeaders:
+      X-Scheme: "https"
+      X-Forwarded-Proto: "https"
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -5,6 +16,7 @@ metadata:
   namespace: media
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: media-tautulli-xscheme@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
