--- a/apps/media/kustomization.yaml
+++ b/apps/media/kustomization.yaml
@@ -34,6 +34,7 @@ resources:
   - audiobookshelf-deployment.yaml
   - audiobookshelf-service.yaml
   - audiobookshelf-ingress.yaml
+  - media-nfs-exporter.yaml
   - calibre-web-deployment.yaml
   - calibre-web-service.yaml
   - calibre-web-ingress.yaml
