--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -19,3 +19,7 @@ data:
         metrics_path: /metrics
         static_configs:
           - targets: ['tautulli-library-exporter.monitoring.svc.cluster.local:9101']
+      - job_name: media-nfs
+        metrics_path: /metrics
+        static_configs:
+          - targets: ['media-nfs-exporter.media.svc.cluster.local:9100']
